--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "focus-trap-react": "^11.0.4",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.548.0",
     "react": "^19.2.0",
@@ -29,7 +30,6 @@
     "@typescript-eslint/eslint-plugin": "^8.46.2",
     "@typescript-eslint/parser": "^8.46.2",
     "@vitejs/plugin-react": "^5.1.0",
-    "autoprefixer": "^10.4.21",
     "eslint": "^9.38.0",
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^7.0.1",
