--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "private": true,
   "version": "2.2.1",
   "type": "module",
+  "packageManager": "pnpm@9",
   "scripts": {
-    "dev": "vite --host 0.0.0.0 --port 5173",
-    "build": "tsc && vite build",
-    "preview": "vite preview --host 0.0.0.0 --port 5176",
+    "dev": "node scripts/run-vite.mjs dev --host 0.0.0.0 --port 5173",
+    "build": "node scripts/run-tsc.mjs -p tsconfig.json && node scripts/run-vite.mjs build",
+    "preview": "node scripts/run-vite.mjs preview --host 0.0.0.0 --port 5176",
     "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
-    "test": "vitest"
+    "test": "node scripts/run-vitest.mjs run",
+    "test:ci": "node scripts/run-vitest.mjs run --reporter=dot",
+    "check:ci": "node scripts/ci-check.mjs",
+    "tsc": "node scripts/run-tsc.mjs -p tsconfig.json"
   },
   "dependencies": {
     "focus-trap-react": "^11.0.4",
