--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "version": "2.2.1",
   "type": "module",
   "scripts": {
-    "dev": "vite --host 0.0.0.0 --port 5173",
-    "build": "tsc && vite build",
-    "preview": "vite preview --host 0.0.0.0 --port 5176",
-    "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
-    "lint:fix": "eslint . --fix",
-    "format": "prettier --write .",
-    "test": "vitest"
+    "dev": "node node_modules/vite/bin/vite.js --host 0.0.0.0 --port 5173",
+    "build": "node node_modules/typescript/bin/tsc && node node_modules/vite/bin/vite.js build",
+    "preview": "node node_modules/vite/bin/vite.js preview --host 0.0.0.0 --port 5176",
+    "lint": "node node_modules/eslint/bin/eslint.js . --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "node node_modules/eslint/bin/eslint.js . --fix",
+    "format": "node node_modules/prettier/bin/prettier.cjs --write .",
+    "test": "node node_modules/vitest/vitest.mjs"
   },
   "dependencies": {
     "focus-trap-react": "^10.3.1",
