--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "tailwindcss": "^4.1.16",
     "typescript": "^5.5.2",
     "vite": "^7.1.12",
-    "vitest": "^4.0.5"
+    "vitest": "^4.0.5",
+    "wrangler": "^4.45.3"
   }
 }
