--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
-    "test": "vitest"
+    "tsc": "tsc --noEmit",
+    "test": "vitest",
+    "test:ci": "vitest run --reporter=dot",
+    "check:ci": "npm run test:ci && npm run build"
   },
   "dependencies": {
     "focus-trap-react": "^10.3.1",
@@ -22,8 +25,7 @@
     "jspdf": "^3.0.3",
     "lucide-react": "^0.548.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-intersection-observer": "^10.0.0"
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.16",
