--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           node-version: 22
           cache: npm
+          cache-dependency-path: package-lock.json
 
       - name: Install deps
         run: npm ci
@@ -26,7 +27,7 @@ jobs:
         run: npm run lint
 
       - name: Test
-        run: npm run test -- --coverage
+        run: npm run test:ci
 
       - name: Build
         run: npm run build
