--- a/.github/workflows/deploy-cloudflare-pages.yml
+++ b/.github/workflows/deploy-cloudflare-pages.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [ "**" ]
 
+defaults:
+  run:
+    shell: bash --noprofile --norc {0}
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
