--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "deploy:cf": "bash scripts/deploy-cloudflare.sh",
     "tokens:build": "node scripts/tokens-build.mjs",
     "tokens:watch": "node scripts/tokens-build.mjs && chokidar \"tokens/**/*.json\" -c \"node scripts/tokens-build.mjs\"",
-    "tokens:lint": "node scripts/token-lint.mjs"
+    "tokens:lint": "node scripts/token-lint.mjs",
+    "audit:a11y": "vitest run --reporter=dot __tests__/a11y.*.test.tsx src/components/__tests__/a11y.*.test.tsx",
+    "audit:lh": "lighthouse http://localhost:5176 --only-categories=accessibility,seo,performance --output html --output-path ./logs/lh-report.html --quiet"
   },
   "dependencies": {
     "focus-trap-react": "^11.0.4",
@@ -44,13 +46,17 @@
     "@vitejs/plugin-react": "^5.1.0",
     "@vitest/coverage-v8": "^4.0.6",
     "autoprefixer": "^10.4.21",
+    "axe-core": "^4.9.0",
+    "chokidar": "^3.6.0",
     "eslint": "^9.38.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.0",
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "jest-axe": "^9.0.0",
     "jsdom": "^27.0.1",
+    "lighthouse": "^12.0.0",
     "postcss": "^8.5.6",
     "prettier": "^3.3.2",
     "tailwindcss": "^4.1.16",
