--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "ts-prune": "^0.10.3"
   },
   "devDependencies": {
+    "@storybook/addon-a11y": "^10.0.7",
+    "@storybook/react-vite": "^10.0.7",
     "@tailwindcss/postcss": "^4.1.16",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
@@ -67,6 +69,7 @@
     "lighthouse": "^12.0.0",
     "postcss": "^8.5.6",
     "prettier": "^3.3.2",
+    "storybook": "^10.0.7",
     "tailwindcss": "^4.1.16",
     "typescript": "^5.5.2",
     "vite": "^7.1.12",
