--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "spec:watch": "npm run spec:build && node scripts/spec-watch.mjs",
     "audit:a11y": "vitest run --reporter=dot __tests__/a11y.*.test.tsx src/components/__tests__/a11y.*.test.tsx",
     "audit:lh": "lighthouse http://localhost:5176 --only-categories=accessibility,seo,performance --output html --output-path ./logs/lh-report.html --quiet",
-    "storybook": "storybook dev -p 6006",
+    "storybook": "storybook dev",
     "storybook:build": "storybook build",
     "storybook:lint": "eslint stories --ext .tsx,.ts"
   },
@@ -43,8 +43,9 @@
     "ts-prune": "^0.10.3"
   },
   "devDependencies": {
-    "@storybook/addon-a11y": "^10.0.7",
+    "storybook": "^10.0.7",
     "@storybook/react-vite": "^10.0.7",
+    "@storybook/addon-a11y": "^10.0.7",
     "@tailwindcss/postcss": "^4.1.16",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
@@ -69,7 +70,6 @@
     "lighthouse": "^12.0.0",
     "postcss": "^8.5.6",
     "prettier": "^3.3.2",
-    "storybook": "^10.0.7",
     "tailwindcss": "^4.1.16",
     "typescript": "^5.5.2",
     "vite": "^7.1.12",
