--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "tsc": "tsc --noEmit",
     "test": "vitest",
     "test:ci": "vitest run --reporter=dot --coverage",
+    "audit": "scripts/audit.sh",
     "check:ci": "npm run tokens:build && npm run tokens:lint && npm run test:ci && npm run build",
     "setup:git": "bash scripts/configure-dev.sh",
     "deploy:cf": "bash scripts/deploy-cloudflare.sh",
