--- a/package.json
+++ b/package.json
@@ -15,11 +15,8 @@
   "dependencies": {
     "focus-trap-react": "^11.0.4",
     "framer-motion": "^12.23.24",
-<<<<<<< HEAD
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
-=======
->>>>>>> feat-portfolio-redesign
     "lucide-react": "^0.548.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -35,6 +32,7 @@
     "@typescript-eslint/eslint-plugin": "^8.46.2",
     "@typescript-eslint/parser": "^8.46.2",
     "@vitejs/plugin-react": "^5.1.0",
+    "autoprefixer": "^10.4.22",
     "eslint": "^9.38.0",
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^7.0.1",
