--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,21 +16,21 @@
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "paths": {
-      "@app/*": ["*"],
-      "@components/*": ["components/*"],
-      "@contexts/*": ["contexts/*"],
-      "@constants/*": ["constants/*"],
-      "@content/*": ["content/*"],
-      "@data/*": ["data/*"],
-      "@design-system/*": ["design-system/*"],
-      "@i18n/*": ["i18n/*"],
-      "@hooks/*": ["hooks/*"],
-      "@sections/*": ["sections/*"],
-      "@telemetry/*": ["telemetry/*"],
-      "@portfolio-types": ["types/portfolio.ts"],
-      "@utils/*": ["utils/*"]
+      "@app/*": ["src/*"],
+      "@components/*": ["src/components/*"],
+      "@contexts/*": ["src/contexts/*"],
+      "@constants/*": ["src/constants/*"],
+      "@content/*": ["src/content/*"],
+      "@data/*": ["src/data/*"],
+      "@design-system/*": ["src/design-system/*"],
+      "@i18n/*": ["src/i18n/*"],
+      "@hooks/*": ["src/hooks/*"],
+      "@sections/*": ["src/sections/*"],
+      "@telemetry/*": ["src/telemetry/*"],
+      "@portfolio-types": ["src/types/portfolio.ts"],
+      "@utils/*": ["src/utils/*"]
     },
 
     /* Linting */
