--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "jsdom": "^27.0.1",
     "prettier": "^3.3.2",
     "tailwindcss": "^4.1.16",
-    "typescript": "^5.5.2",
+    "typescript": "5.5.2",
     "vite": "^7.1.12",
     "vitest": "^4.0.5"
   }
